Solve problem with color

--- a/Lab2/app/src/main/res/layout/activity_main.xml
+++ b/Lab2/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="80dp">
 
+        <TextView
+            android:id="@+id/textView"
+            style="@style/Style"
+            android:gravity="center_horizontal"
+            android:layout_margin="30dp"
+            android:padding="10dp"
+            android:text="@string/_0"
+            />
+
+        <EditText
+            android:id="@+id/number"
+            style="@style/Style"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:ems="10"
+            android:inputType="number"
+            />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center"
+            android:textSize="16sp"
+            android:text="@string/ok" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
