--- a/Lab2/app/src/main/res/values-ru/styles.xml
+++ b/Lab2/app/src/main/res/values-ru/styles.xml
@@ -9,7 +9,8 @@
 
     <style name="Style">
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">#033777</item>
+        <item name="android:textColor">#3300cc</item>
+        <item name="fontFamily">sans-serif</item>
         <item name="android:typeface">monospace</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
