--- a/Lab2/app/src/main/res/values/styles.xml
+++ b/Lab2/app/src/main/res/values/styles.xml
@@ -7,4 +7,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Style">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#3300cc</item>
+        <item name="fontFamily">sans-serif</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
 </resources>
